--- a/elements/document/nuxeo-document-page.html
+++ b/elements/document/nuxeo-document-page.html
@@ -16,8 +16,8 @@ limitations under the License.
 -->
 
 <link rel="import" href="../../bower_components/polymer/polymer.html">
-<link rel="import" href="../../bower_components/paper-card/paper-card.html">
 <link rel="import" href="../../bower_components/paper-icon-button/paper-icon-button.html">
+<link rel="import" href="../../bower_components/nuxeo-ui-elements/widgets/nuxeo-card.html">
 <link rel="import" href="../../bower_components/nuxeo-ui-elements/nuxeo-layout-behavior.html">
 <link rel="import" href="../../bower_components/nuxeo-ui-elements/widgets/nuxeo-tag-suggestion.html">
 <link rel="import" href="../nuxeo-document-info-bar/nuxeo-document-info-bar.html">
@@ -50,24 +50,47 @@ limitations under the License.
       .page .side {
         @apply(--layout-vertical);
         @apply(--layout-flex);
+        position: relative;
+        margin-bottom: 16px;
+      }
+
+      .scroller {
+        position: absolute;
+        left: 0;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        overflow: auto;
       }
 
       @media (max-width: 1024px) {
         .page {
           flex-direction: column;
         }
+
         .page .main {
           padding: 0;
           margin-bottom: 1rem;
           max-width: initial;
         }
+
+        .side {
+          padding: 0;
+          margin-bottom: 1rem;
+          max-width: initial;
+          display: block !important;
+        }
+
+        .scroller {
+          position: relative;
+        }
       }
 
-      ::content paper-icon-button  {
+      ::content paper-icon-button {
         @apply(--nuxeo-action);
       }
 
-      ::content paper-icon-button:hover  {
+      ::content paper-icon-button:hover {
         @apply(--nuxeo-action-hover);
       }
 
@@ -82,40 +105,36 @@ limitations under the License.
       </div>
 
       <div class="side">
+        <div class="scroller">
+          <!-- info -->
+          <nuxeo-card>
+            <nuxeo-document-info document="[[document]]"></nuxeo-document-info>
+          </nuxeo-card>
 
-        <!-- info -->
-        <paper-card>
-          <nuxeo-document-info document="[[document]]"></nuxeo-document-info>
-        </paper-card>
+          <!-- metadata -->
+          <nuxeo-card>
+            <nuxeo-document-metadata document="[[document]]"></nuxeo-document-metadata>
+          </nuxeo-card>
 
-        <!-- metadata -->
-        <paper-card>
-          <nuxeo-document-metadata document="[[document]]"></nuxeo-document-metadata>
-        </paper-card>
+          <!-- collections -->
+          <nuxeo-card hidden$="[[!_showCollections(document)]]" label="[[i18n('documentPage.collections')]]">
+            <nuxeo-document-collections document="[[document]]"></nuxeo-document-collections>
+          </nuxeo-card>
 
-        <!-- collections -->
-        <paper-card hidden$="[[!_showCollections(document)]]">
-          <h3>[[i18n('documentPage.collections')]]</h3>
-          <nuxeo-document-collections document="[[document]]"></nuxeo-document-collections>
-        </paper-card>
+          <!-- tags -->
+          <nuxeo-card label="[[i18n('documentPage.tags')]]">
+            <nuxeo-tag-suggestion document="[[document]]" allow-new-tags
+                                  placeholder="[[i18n('documentPage.tags.placeholder')]]">
+            </nuxeo-tag-suggestion>
+          </nuxeo-card>
 
-        <!-- tags -->
-        <paper-card>
-          <h3>[[i18n('documentPage.tags')]]</h3>
-          <nuxeo-tag-suggestion document="[[document]]" allow-new-tags
-                                placeholder="[[i18n('documentPage.tags.placeholder')]]">
-          </nuxeo-tag-suggestion>
-        </paper-card>
-
-        <!-- activity -->
-        <paper-card>
-          <h3>[[i18n('documentPage.activity')]]</h3>
-          <nuxeo-document-activity document="[[document]]"></nuxeo-document-activity>
-        </paper-card>
-
+          <!-- activity -->
+          <nuxeo-card label="[[i18n('documentPage.activity')]]">
+            <nuxeo-document-activity document="[[document]]"></nuxeo-document-activity>
+          </nuxeo-card>
+        </div>
       </div>
     </div>
-
   </template>
   <script>
     Polymer({
@@ -131,7 +150,7 @@ limitations under the License.
         return !this.hasFacet(doc, 'Immutable') && doc.type !== 'Root' && doc.state !== 'deleted';
       },
 
-      _showCollections: function (doc) {
+      _showCollections: function(doc) {
         return this.hasCollections(doc);
       }
     });
